crates/serde-feather/tests/ui/enum_duplicate_variant_name.stderr
error: duplicate wire enum variant name `circle` in serialization; conflicts with variant `Circle`
 --> tests/ui/enum_duplicate_variant_name.rs:7:22
  |
7 |     #[serde(rename = "circle")]
  |                      ^^^^^^^^
