crates/serde-feather/tests/ui/enum_duplicate_variant_name.rs
use serde_feather::FeatherDeserialize;

#[derive(FeatherDeserialize)]
enum Shape {
    #[serde(rename = "circle")]
    Circle,
    #[serde(rename = "circle")]
    Round,
}

fn main() {}
